# orgforge

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  EVAL.md  INSIDERTHREAT.md  LICENSE  README.md  VIEWER_SETUP.md  changes.patch  docker-compose.yaml  pyproject.toml  requirements-cloud.txt  requirements-test.txt  requirements.txt
config/: config.yaml  velomind.yaml
eval/: agentic_eval_harness.py  diag.py  eval_e2e.py  eval_harness.py  export_to_hf.py  rescore.py  retrieval_extensions.py  scorer.py
scripts/: compare_baseline_grounded.py  normalize_actor_names.py  ollama-entrypoint.sh  repair_email_threads.py  run_stage1_profiles.py  run_velomind.py  seed_velomind_baseline.py  slice_baseline_days.py  test_grounding_fetchers.py  validate_dataset.py  view_export.py
src/: agent_factory.py  artifact_registry.py  causal_chain_handler.py  config_loader.py  confluence_writer.py  crm_system.py  dataset_validation.py  day_planner.py  email_gen.py  embed_worker.py  eval_harness.py  external_email_ingest.py  flow.py  genesis.py  graph_dynamics.py  insider_threat.py  memory.py  normal_day.py  org_lifecycle.py  plan_validator.py  planner_models.py  post_sim_artifacts.py  provider_config.py  sim_clock.py  ticket_assigner.py  token_tracker.py  viewer.py
tests/: conftest.py  test_causal_chain_handler.py  test_crm_system.py  test_dataset_validation.py  test_day_planner.py  test_external_email.py  test_flow.py  test_insider_threat.py  test_integration.py  test_lifecycle.py  test_memory.py  test_normal_day.py  (+4 more)
(+45 files in other folders)
