[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "flow"
dynamic = ["version"]
readme = "README.md"
description = "Synthetic corporate dataset generator for AI agent evaluation."

[tool.setuptools_scm]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:deprecated:DeprecationWarning:crewai.crew",
]